lots of scary messages lol

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,44 @@
-//
+// Variables
+// @import "variables";
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+// Fonts
+// @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900);
+// @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
+// @import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900);
+// @import url(https://use.typekit.net/cho5yxn.css);
+
+// Select2
+//@import "node_modules/select2/dist/css/select2";
+
+// Vue Select
+// @import "/node_modules/vue-multiselect/dist/vue-multiselect.min.css";
+
+// Animate.css
+// @import "/node_modules/animate.css/animate.css";
+
+// Font Awesome
+//@import "/node_modules/@fortawesome/fontawesome-free/css/fontawesome.css";
+
+// Vue Multiselect
+// @import "node_modules/vue-multiselect/dist/vue-multiselect.min.css";
+
+// Main
+@import "main";
+
+// Applications
+///@import "applications";
+
+// Volvo
+//@import "volvo";
+
+// Volvo
+// @import "volvo";
+
+// Login
+// @import "login";
+
+// Buttons
+// @import "buttons";
