--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11520,6 +11520,10 @@ p.thank-you {
   letter-spacing: 0.2em;
 }
 
+td.header {
+  background: #fff;
+}
+
 .slide-enter-active {
   -webkit-transition-duration: 0.5s;
   transition-duration: 0.5s;
