--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11582,5 +11582,10 @@ td.header {
   .contact-form {
     width: 100vw;
   }
+
+  .full-height {
+    height: 0 !important;
+    padding-top: 45vh;
+  }
 }
 
