--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -226,4 +226,7 @@ and (orientation : portrait) {
     height: 0 !important;
     padding-top: 45vh;
   }
+  .form-row {
+    margin: 0 !important;
+  }
 }
