--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11555,32 +11555,18 @@ td.header {
   max-width: 0;
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: portrait) {
+  body {
+    height: auto;
+  }
+
   .contact-form {
     top: 0;
     right: 0;
     position: absolute;
-    height: 100vh;
-    width: 400px;
+    height: auto;
+    width: auto;
     background: #1b1b1b;
-  }
-}
-
-@media only screen and (min-device-width: 414px) and (max-device-width: 736px) and (orientation: portrait) {
-  .contact-form {
-    width: 100vw;
-  }
-}
-
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (orientation: portrait) {
-  .contact-form {
-    width: 100vw;
-  }
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: portrait) {
-  .contact-form {
-    width: 100vw;
   }
 
   .full-height {
