--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -184,14 +184,7 @@ and (min-device-width : 375px)
 and (max-device-width : 812px) 
 and (-webkit-device-pixel-ratio : 3)
 and (orientation : portrait) {
-  .contact-form {
-    top: 0;
-    right: 0;
-    position: absolute;
-    height: 100vh;
-    width: 400px;
-    background: #1b1b1b;
-  }
+  
 }
 
 // iPhone 6/7/8 Plus portrait
@@ -199,9 +192,7 @@ and (orientation : portrait) {
 and (min-device-width : 414px) 
 and (max-device-width : 736px) 
 and (orientation : portrait) {
-  .contact-form {
-    width: 100vw;
-  }
+
 }
 
 // iPhone 6/7/8 portrait
@@ -209,9 +200,7 @@ and (orientation : portrait) {
 and (min-device-width : 375px) 
 and (max-device-width : 667px) 
 and (orientation : portrait) {
-  .contact-form {
-    width: 100vw;
-  }
+
 }
 
 // iPhone 5/5SE portrait
@@ -219,8 +208,16 @@ and (orientation : portrait) {
 and (min-device-width : 320px) 
 and (max-device-width : 568px) 
 and (orientation : portrait) {
+  body {
+    height: auto;
+  }
   .contact-form {
-    width: 100vw;
+    top: 0;
+    right: 0;
+    position: absolute;
+    height: auto;
+    width: auto;
+    background: #1b1b1b;
   }
   .full-height {
     height: 0 !important;
