overflow on mobile

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -210,6 +210,7 @@ and (max-device-width : 568px)
 and (orientation : portrait) {
   body {
     height: auto;
+    overflow: hidden;
   }
   .contact-form {
     top: 0;
