--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11558,6 +11558,7 @@ td.header {
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: portrait) {
   body {
     height: auto;
+    overflow: hidden;
   }
 
   .contact-form {
