overflow on mobile

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -219,6 +219,7 @@ and (orientation : portrait) {
     height: auto;
     width: auto;
     background: #1b1b1b;
+    overflow: scroll;
   }
   .full-height {
     height: 0 !important;
