--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -209,17 +209,17 @@ and (min-device-width : 320px)
 and (max-device-width : 568px) 
 and (orientation : portrait) {
   body {
-    height: auto;
-    overflow: hidden;
+    height: 96vh;
+    // overflow: hidden;
   }
   .contact-form {
     top: 0;
     right: 0;
     position: absolute;
-    height: auto;
+    height: 98vh;
     width: auto;
     background: #1b1b1b;
-    overflow: scroll;
+    // overflow: scroll;
   }
   .full-height {
     height: 0 !important;
