--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -212,6 +212,9 @@ and (orientation : portrait) {
     height: 100vh;
     // overflow: hidden;
   }
+  #home {
+    overflow: hidden;
+  }
   .contact-form {
     top: 0;
     right: 0;
@@ -219,7 +222,7 @@ and (orientation : portrait) {
     // height: auto;
     width: auto;
     background: #1b1b1b;
-    // overflow: scroll;
+    overflow: scroll;
   }
   .full-height {
     height: 0 !important;
