overflow on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11556,6 +11556,10 @@ td.header {
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: portrait) {
+  #home {
+    overflow: hidden;
+  }
+
   .contact-form {
     width: auto;
     background: #1b1b1b;
