--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -212,6 +212,9 @@ and (orientation : portrait) {
     // height: auto;
     // overflow: hidden;
   }
+  #home {
+    overflow: hidden;
+  }
   .contact-form {
     // height: auto;
     width: auto;
